# train2earn

./: .gitattributes  .gitignore  README.md  TRAINING_DATA_MAP.md  cloudbuild.yaml  nano_v3_reasoning_parser.py
nvidia/: Dockerfile.ngc  Dockerfile.ngc.dockerignore  LOCAL_MAC_STACK.md  NEMOTRON_ULTRA_AGENT.md  README.md  deploy_nemotron_trtllm.ipynb  fal_serverless_app.py  finetune_nemotron_clawd.ipynb  nemotron_ultra_agent.py  ngc_app.py  pyproject.toml
nvidia/blueprints/aiq/: README.md  agent.py  tools.py  workflow.yaml
nvidia/blueprints/enterprise-rag/: Dockerfile.fly  Dockerfile.fly.dockerignore  README.md  fly.toml  ingest.py  pipeline.py  query.py  requirements-fly.txt
nvidia/blueprints/model-distillation/: README.md  distill.py
nvidia/blueprints/portfolio-optimization/: README.md  cufolio_clawd.py  mean_cvar.py  phoenix_prices.py  scenarios.py
nvidia/blueprints/signal-discovery/: README.md  agent.py  build.sh  perps_signal_agent.py  quantitative_signal_agent.py  server.py  signals.py
nvidia/blueprints/transaction-foundation-model/: 01_dataset_baseline.ipynb  02_seq_preproc_tokenization.ipynb  03_foundation_model_training.ipynb  04_inference_embedding_extraction.ipynb  05_xgboost_fraud_detection.ipynb  README.md  bigquery_collector.py  collect.py  config.yaml  (+13 more)
nvidia/configs/: aiq_config.yaml  nemo_clawd_factory.yaml  ngc_deploy.yaml  nim_config.yaml  pretrain_financial_decoder.yaml  pretrain_solana_decoder.yaml  solana_tx_foundation.yaml
nvidia/cufolio/: README.md  constraints.py  portfolio.py  rebalance.py
nvidia/gcp/: Dockerfile.ollama-serve  deploy_ollama_vertex.sh  entrypoint.sh
nvidia/integration/: README.md  clawd_nim_bridge.py  dataset_nvidia_sft.py  fal_inference.py  nemo_clawd.py  nemo_clawd_agent.py  trading_factory_nvidia.py
nvidia/scripts/: deploy_fal_serverless.sh  deploy_ngc.sh  fal_assets.py  setup_nvidia.sh  validate_configs.py  verify_fal_serverless.py  verify_ngc_deploy.py  verify_nvidia.py
(+2251 files in other folders)
