[project]
name = "solana-clawd-nvidia-fal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fal",
  "fal-client",
  "httpx>=0.27",
  "pydantic>=2",
]

[tool.fal.apps.clawd-nvidia-agent]
ref = "fal_serverless_app.py::ClawdNvidiaFalApp"
auth = "private"
python_version = "3.12"
requirements = [
  "fal",
  "fal-client",
  "httpx>=0.27",
  "pydantic>=2",
]
request_timeout = 180
startup_timeout = 120
keep_alive = 60
min_concurrency = 0
max_concurrency = 5
private_logs = true
secrets = ["FAL_KEY"]
app_files = [
  "README.md",
  "configs/nim_config.yaml",
  "integration",
]
app_files_ignore = [
  ".*__pycache__.*",
  ".*\\.pyc$",
  ".*\\.DS_Store$",
]

[tool.fal.apps.clawd-nvidia-agent.health_check]
path = "/health"
start_period_seconds = 10
timeout_seconds = 5
failure_threshold = 3
call_regularly = true
